After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755206 - Crash when closing the SMART dialog
Crash when closing the SMART dialog
Status: RESOLVED FIXED
Product: gnome-disk-utility
Classification: Core
Component: Disks UI
3.17.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-disk-utility-maint
gnome-disk-utility-maint
Depends on:
Blocks:
 
 
Reported: 2015-09-18 07:13 UTC by Piotr Drąg
Modified: 2015-09-21 16:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix incorrect assertions that were recently added (1.89 KB, patch)
2015-09-18 14:55 UTC, Michael Catanzaro
committed Details | Review

Description Piotr Drąg 2015-09-18 07:13:00 UTC
Closing the SMART dialog crashes the whole application with this message in the command line:

GNOME-Disks:ERROR:gduatasmartdialog.c:1658:gdu_ata_smart_dialog_show: code should not be reached



gnome-disk-utility-3.17.91-1.fc23.x86_64
Comment 1 Michael Catanzaro 2015-09-18 14:54:52 UTC
Thanks. Guess I failed to test this. :(
Comment 2 Michael Catanzaro 2015-09-18 14:55:09 UTC
Created attachment 311640 [details] [review]
Fix incorrect assertions that were recently added

Fixes crash when using or closing the benchmark and SMART dialogs. This
was a regression from da0fbba262a5a88034793de864429fa2dc8bb38a.
Comment 3 Michael Catanzaro 2015-09-21 16:40:48 UTC
Attachment 311640 [details] pushed as 988f64e - Fix incorrect assertions that were recently added