Fix incorrect assertions that were recently added

Fixes crash when using or closing the benchmark and SMART dialogs. This
was a regression from da0fbba262a5a88034793de864429fa2dc8bb38a.

https://bugzilla.gnome.org/show_bug.cgi?id=755206