src/disks/gdubenchmarkdialog.c
@@ -1650,6 +1650,10 @@ gdu_benchmark_dialog_show (GduWindow    *window,
     {
       gint response;
       response = gtk_dialog_run (GTK_DIALOG (data->dialog));
+
+      if (response < 0)
+        break;
+
       /* Keep in sync with .ui file */
       switch (response)
         {
@@ -1664,9 +1668,6 @@ gdu_benchmark_dialog_show (GduWindow    *window,
         default:
           g_assert_not_reached ();
         }
-
-      if (response < 0)
-        break;
     }
 
   g_source_remove (timeout_id);
